tests/ui/unstable-features/marker_trait_attr.stderr
error[E0119]: conflicting implementations of trait `std::marker::Unpin` for type `Foo<_>`:
  --> $DIR/marker_trait_attr.rs:14:1
   |
14 | #[pin_project] //~ ERROR E0119
   | ^^^^^^^^^^^^^^ conflicting implementation for `Foo<_>`
...
21 | impl<T> Unpin for Foo<T> {}
   | ------------------------ first implementation here
